sonar feedbacks : modification of visibility of some attributes (webdriver tools)